--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT = 5000
-MONGO_URI = mongodb://localhost:27017/mathonGo
+MONGO_URI = mongodb+srv://mithilesh:mithil3sh@mymongo.0unwksi.mongodb.net/mathongo?retryWrites=true&w=majority
 EMAIL=mithileshmy14@gmail.com
 PASSWORD=mithiGarrix@1405
+TEMP_PASSWORD=fpps mcxv znra bewu
